tests/baselines/reference/parserComputedPropertyName37.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName37.ts(2,5): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName37.ts (1 errors) ====
    var v = {
        [public]: 0
        ~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
    };